<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Notifications Fragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.iie.st10089153.txdevsystems_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notifications_to_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_notifications_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iie.st10089153.txdevsystems_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.iie.st10089153.txdevsystems_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_profile_to_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

</navigation>